use collect not toList